still doing some bug fixing on the portfolio. I had some of my divs hiding behind the blocker div but setting position relative appears to have fixed that issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,7 +128,7 @@ table {
 }
 * {
   box-sizing: border-box;
-  z-index: 1;
+  z-index: 0;
 }
 html {
   font-size: 62.5%;
@@ -145,9 +145,6 @@ body::-webkit-scrollbar-track {
 }
 body::-webkit-scrollbar-thumb {
   background: #3A2E5D;
-}
-a {
-  z-index: 3;
 }
 main {
   padding: 1rem;
@@ -173,7 +170,6 @@ img {
   height: auto;
 }
 nav {
-  z-index: 3;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -190,11 +186,10 @@ header {
   border-bottom: 2px solid black;
   height: 62px;
   top: 0;
-  z-index: 2;
+  z-index: 4;
 }
 header a {
   font-size: 2rem;
-  z-index: 3;
 }
 footer {
   bottom: 0;
@@ -223,7 +218,7 @@ footer .container div * {
 .full-screen {
   height: 100%;
   width: 100%;
-  z-index: 2;
+  z-index: 3;
   opacity: 0;
   position: fixed;
 }
@@ -244,7 +239,6 @@ footer .container div * {
   border-radius: 15px 0 0 0;
 }
 #main-section {
-  z-index: 1;
   margin-top: 30vh;
 }
 #main-section #introduction {
@@ -302,12 +296,14 @@ footer .container div * {
   margin: 6% auto 1%;
   background-color: #3A2E5D;
   border-radius: 45px 20px;
+  z-index: 2;
+  position: relative;
 }
 .inner-container {
   background-color: #C0C0C0;
   border: 2px solid black;
-  width: 99%;
-  height: 99%;
+  width: 98%;
+  height: 98%;
   margin-top: 0.5%;
   border-radius: 50px 15px;
 }
