--- a/less/global.less
+++ b/less/global.less
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    z-index: 1;
+    z-index: 0;
   }
   html {
     font-size: 62.5%;
@@ -17,10 +17,6 @@
   }
   body::-webkit-scrollbar-thumb {
     background: @bgPurple;
-  }
-  a{
-    // text-decoration: none;
-    z-index: @top;
   }
   main {
     padding: 1rem;
