--- a/less/header-footer.less
+++ b/less/header-footer.less
@@ -6,10 +6,9 @@ header{
     border-bottom:2px solid black;
     height:62px;
     top:0;
-    z-index: @middle;
+    z-index: @top;
     a{
         font-size:2rem;
-        z-index: @top;
     }
 }
 footer{
