--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,7 +1,7 @@
 .full-screen{
     height:100%;
     width:100%;
-    z-index: @middle;
+    z-index: @upper;
     opacity: 0;
     position: fixed;
 }
@@ -22,7 +22,7 @@
     border-radius: 15px 0 0 0;
 }
 #main-section{
-    z-index: @lower;
+    // z-index: @middle;
     margin-top:30vh;
     #introduction{
         .flexMixin(@justify:space-around);
@@ -66,12 +66,14 @@
     margin: 6% auto 1%;
     background-color: @bgPurple;
     border-radius: 45px 20px;
+    z-index: @middle;
+    position: relative;
   }
 .inner-container{
     background-color: #C0C0C0;
     border:2px solid black;
-    width:99%;
-    height:99%;
+    width:98%;
+    height:98%;
     margin-top: .5%;
     border-radius: 50px 15px;
 }
