--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,4 +1,3 @@
 nav{
-    z-index: @top;
     .flexMixin(@justify:space-around);
 }
