--- a/less/variables.less
+++ b/less/variables.less
@@ -13,7 +13,8 @@
 @color-blue: #445175;
 
 // positions
-@top: 3;
-@middle: 2;
-@lower: 1;
-@bottom: 0;
+@top: 4; // links
+@upper: 3; // event listener
+@middle: 2; // middle layer
+@lower: 1; // lower layer
+@bottom: 0; // color change and background
